# Fabee-Default-UI

./: README.md  pyproject.toml
.github/workflows/: ci.yml
fabee_default_ui/: hooks.py  modules.txt
