[project]
name = "fabee_default_ui"
authors = [
    { name = "Fabee", email = "fabee@gmail.com"}
]
description = "A foundational UI framework for Fabee, built to streamline and standardize the user interface design with a focus on simplicity, responsiveness, and customization."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
